feat(日志):一体机登录新增日志
一体机信息登录日志录入，提供一体机访问记录及次数查询